<resources>
    <string name="app_name">Diplom</string>
    <string name="remove">Remove</string>
    <string name="edit">Edit</string>
    <string name="chooser_share">Share</string>
    <string name="description_post_save">Save</string>
    <string name="add">Add entity</string>
    <string name="error_loading">Something went wrong. Try again later</string>
    <string name="retry_loading">Retry</string>
    <string name="empty_entity">There are no %1$s.\nIf you create a new %1$s, it will appear here</string>
    <string name="error_network">Error network</string>
    <string name="error_unknown">Error unknown</string>
    <string name="db_error">Error Data base</string>
    <string name="menu_save">Save</string>
    <string name="description_select_photo">Select photo</string>
    <string name="description_take_photo">Take photo</string>
    <string name="description_photo">Photo</string>
    <string name="edit_post">Edit post</string>
    <string name="show_image">Image</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_out">Sign Out</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="authentication">Authentication</string>
    <string name="error_login">Input login</string>
    <string name="error_password">Input password</string>
    <string name="refine_signout">Do you want to sign out?</string>
    <string name="cancel">Cancel</string>
    <string name="name">User name</string>
    <string name="password_conf">Password confirmation</string>
    <string name="error_name">Input user name</string>
    <string name="error_conf_password">The entered passwords do not match</string>
    <string name="registration">Registration</string>
    <string name="warning_login_or_pass">Invalid username or password</string>
    <string name="error_server">Error server</string>
    <string name="camera">Take a picture</string>
    <string name="gallery">Download from device</string>
    <string name="online">Online</string>
    <string name="title_new_job">New job</string>
    <string name="start">Start</string>
    <string name="finish">Finish</string>
    <string name="company">Company</string>
    <string name="position">Position</string>
    <string name="link">Link</string>
    <string name="company_job">Company: %1$s</string>
    <string name="position_job">Position: %1$s</string>
    <string name="link_job">Link: %1$s</string>
    <string name="work_experience">Work experience: from %1$s to %2$s</string>
    <string name="work_experience_now">Work experience: from %1$s to until now</string>
    <string name="title_new_event">New event</string>
    <string name="event_date">Event date</string>
    <string name="description">Description</string>
    <string name="offline">Offline</string>
    <string name="event_time">Event time</string>
    <string name="title_new_post">New post</string>
    <string name="text_input">Text input</string>
    <string name="title_new_entity">New entity</string>
    <string name="participate">Participate</string>
    <string name="image">Image</string>
    <string name="feed">Feed</string>
    <string name="posts">Posts</string>
    <string name="events">Events</string>
    <string name="job">Job</string>
    <string name="refuse">Refuse</string>
    <string name="user">User</string>
    <string name="error_startdate">Input start date</string>
    <string name="error_company">Input company</string>
    <string name="error_position">Input position</string>
    <string name="error_event_date">Input event date</string>
    <string name="error_event_time">Input event time</string>
    <string name="error_description">Input description</string>
    <string name="jobs">Jobs</string>
    <string name="error_link">Input link</string>
    <string name="event_datetime">%1$s at %2$s</string>
    <string name="image_avatar">Image avatar</string>
    <string name="menu">menu</string>
    <string name="image_content">Image content</string>
    <string name="select_image_avatar">Select image avatar</string>
    <string name="notauthorized">You are not authorized</string>
    <string name="edit_job">Edit job</string>
    <string name="edit_event">Edit event</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="select_speaker">Select speaker</string>
</resources>