<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/offset_entity"
    app:cardCornerRadius="@dimen/card_radius">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/offset_entity">

        <ImageView
            android:id="@+id/avatar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/offset_entity"
            android:contentDescription="@string/image_avatar"
            android:src="@drawable/ic_avatar"
            app:layout_constraintBottom_toTopOf="@id/barrier_top"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/author"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/offset"
            android:ellipsize="end"
            android:singleLine="true"
            android:textColor="@color/purple_500"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/published"
            app:layout_constraintEnd_toStartOf="@id/menu"
            app:layout_constraintStart_toEndOf="@+id/avatar"
            app:layout_constraintTop_toTopOf="@+id/avatar"
            tools:text="@sample/entity.json/data/author" />

        <TextView
            android:id="@+id/published"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/offset"
            app:layout_constraintBottom_toBottomOf="@+id/avatar"
            app:layout_constraintStart_toEndOf="@+id/avatar"
            app:layout_constraintTop_toBottomOf="@+id/author"
            tools:text="@sample/entity.json/data/published" />

        <ImageButton
            android:id="@+id/menu"
            style="@style/Widget.Material3.Button.IconButton"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/height_more"
            android:layout_margin="@dimen/offset_entity"
            android:background="?android:attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/menu"
            android:padding="0dp"
            android:src="@drawable/ic_more"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/barrier_top"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="bottom"
            app:constraint_referenced_ids="avatar, menu, published" />

        <TextView
            android:id="@+id/event_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/offset_entity"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/barrier_top"
            tools:text="@sample/entity.json/data/datetime" />

        <TextView
            android:id="@+id/event_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/event_date"
            tools:text="@sample/entity.json/data/type" />

        <TextView
            android:id="@+id/event_link"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autoLink="web"
            android:textColorLink="@color/purple_500"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/event_type"
            tools:text="@sample/entity.json/data/linkEvent" />

        <TextView
            android:id="@+id/content"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/offset_entity"
            android:autoLink="web"
            android:lineSpacingMultiplier="1.5"
            android:scrollbars="vertical"
            android:textColorLink="@color/purple_500"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/event_link"
            tools:text="@sample/entity.json/data/content" />

        <ImageView
            android:id="@+id/image_event"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_image_post"
            android:contentDescription="@string/image_content"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="@+id/content"
            app:layout_constraintStart_toStartOf="@+id/content"
            app:layout_constraintTop_toBottomOf="@+id/content"
            tools:src="@drawable/android"
            tools:visibility="visible" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/barrier_bottom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/offset"
            app:barrierDirection="bottom"
            app:constraint_referenced_ids="content, image_event" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/likes"
            style="@style/LikeButton"
            android:layout_width="@dimen/button_width"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/barrier_bottom"
            tools:text="@sample/entity.json/data/likes" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/participants"
            style="@style/OtherButton"
            android:layout_width="@dimen/button_width"
            android:layout_height="wrap_content"
            app:icon="@drawable/ic_participants"
            app:layout_constraintBottom_toBottomOf="@+id/likes"
            app:layout_constraintStart_toEndOf="@+id/likes"
            app:layout_constraintTop_toTopOf="@+id/likes"
            tools:text="@sample/entity.json/data/participants" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/speaker"
            style="@style/OtherButton"
            android:layout_width="@dimen/button_width"
            android:layout_height="wrap_content"
            app:icon="@drawable/ic_speaker"
            app:layout_constraintBottom_toBottomOf="@+id/participants"
            app:layout_constraintStart_toEndOf="@+id/participants"
            app:layout_constraintTop_toTopOf="@+id/participants"
            tools:text="@sample/entity.json/data/speaker" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/share"
            style="@style/OtherButton"
            android:layout_width="@dimen/button_width_share"
            android:layout_height="@dimen/button_height_share"
            app:icon="@drawable/ic_share"
            app:layout_constraintBottom_toBottomOf="@+id/speaker"
            app:layout_constraintStart_toEndOf="@+id/speaker"
            app:layout_constraintTop_toTopOf="@+id/speaker" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/participate"
            style="@style/Widget.Material3.Button.ElevatedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/teal_200"
            android:padding="0dp"
            android:text="@string/participate"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="@dimen/button_text_size"
            app:layout_constraintBottom_toBottomOf="@id/share"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/share" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>
